# LinuxBackup_Rust

./: .gitignore  README.md
rust/: TestFile
rust/backupScript/: backupScript_main.rs
rust/backup_script/: .gitignore  Cargo.toml  interpretation_of_tui-rs.txt  packages.txt  test.txt
rust/backup_script/src/: basic_backup.rs  basic_backup_fail.rs  basic_restore.rs  main.rs  tui_test.rs
rust/backup_script/src/util/: event.rs
rust/guessing_game/: Cargo.toml
rust/guessing_game/src/: main.rs
rust/hello_world2/: Cargo.toml
