[package]
name = "backup_script"
version = "1.0.0"
authors = ["Jeames Aitkin <Jeames8kin@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.0"
os_type = "2.2"
cmd_lib = "0.8.4"
chrono = "0.4"
tui = "0.13.0"